mapped alignments formatting fix

--- a/web-app/css/style.css
+++ b/web-app/css/style.css
@@ -342,11 +342,11 @@ ul.links li{
 }
 .seqstr {
     display: inline-block;
-    width: 950px;
+    margin-right: 10px;
 }
 .base {
     display: inline-block;
-    width: 13px;
+    width: 9px;
     height: 15px;
     vertical-align: middle;
     text-align: center;
